services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v1-svc
spec:
  selector:
    app: nginx
    version: v1
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2-svc
spec:
  selector:
    app: nginx
    version: v2
  ports:
  - port: 80
    targetPort: 80
