ingresses.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-canary
spec:
  entryPoints:
  - web
  routes:
  - match: PathPrefix(`/`) && Header(`X-Canary`, `true`)
    kind: Rule
    services:
    - name: nginx-v2-svc
      port: 80
  - match: PathPrefix(`/`)
    kind: Rule
    services:
    - name: nginx-v1-svc
      port: 80
